[workspace]
members = [
    "bin/bolas",
]

[workspace.package]
version = "2023.9.1"
edition = "2018"
authors = ["John Norwood"]

[workspace.dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4.2"
actix-web-actors = "4.1"
bio = "1.1"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
libsystemd = "0.6"
rusty-hook = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }
