[workspace]
members = [
    "bin/bolas",
]

[workspace.package]
version = "2023.10.0"
edition = "2018"
authors = ["John Norwood"]

[workspace.dependencies]
actix = "0.13"
actix-files = "0.6"
actix-http = "3.4"
actix-service = "2.0"
actix-web = "4.2"
actix-web-actors = "4.1"
bio = "1.1"
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
libsystemd = "0.6"
prometheus = "0.13"
rusty-hook = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }
