[workspace]
members = [
    "bin/bolas",
]

[workspace.package]
version = "2024.6.0"
edition = "2018"
authors = ["John Norwood"]

[workspace.dependencies]
actix = "0.13"
actix-files = "0.6"
actix-http = "3.4"
actix-service = "2.0"
actix-web = "4.2"
actix-web-actors = "4.1"
bio = "1.1"
foundations = { version = "3.1", features = ["cli", "jemalloc", "logging", "metrics", "telemetry-server"], default-features = false }
futures = "0.3"
libsystemd = "0.6"
rusty-hook = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "signal"] }
uuid = { version = "1.7", features = ["v4"] }
vergen = { version = "8.2", features = ["build", "git", "gitcl"] }
